# adaptive_frame_rs

./: .gitignore  Cargo.toml  README.md
app/: Cargo.toml
app/examples/: connect_platform_app.rs
app/src/: abstract_app.rs  app.rs  app_remote_connector.rs  lib.rs
app/src/abstract_app/: get_value_thread.rs
app/src/app_remote_connector/: app_remote_connector_tcp.rs
common/: Cargo.toml
common/src/: lib.rs  socket.rs  structs.rs
common/src/socket/: abstract_tcp.rs  cmd_message.rs  cmd_message_grp_ids.rs  tcp.rs  udp.rs
common/src/structs/: actor_info.rs  app_info.rs  ctx_service_config.rs  enumeration.rs  resource_config.rs  sensor_data.rs  sensor_info.rs  service_config.rs  service_info.rs  service_result.rs  set_state.rs  state.rs  sync.rs  time_line.rs  time_node.rs  value_type.rs
common/src/structs/enumeration/: check_result.rs  cmd_type.rs  compare_type.rs  ctx_validator.rs  order_type.rs  resource_type.rs  sensor_data_type.rs  sensor_mode.rs  service_type.rs
common/src/structs/sync/: synchronous_json_object.rs  synchronous_sensor_data.rs  synchronous_set_state.rs  synchronous_string.rs
common/src/util/: util.rs
common/test_dir/: test.txt
common/tests/: socket_test.rs
platform/: Cargo.toml  configfile
platform/examples/: app_run.rs  platform_run.rs  resource_run.rs
platform/src/: app.rs  config.rs  database.rs  lib.rs  main.rs  pubsub.rs  resource.rs  service.rs
platform/src/app/: app_driver.rs  app_mgr.rs  app_mgr_thread.rs
platform/src/app/app_driver/: app_driver_tcp.rs
platform/src/config/: configuration.rs  ctx_server_config.rs  tcp_config.rs  udp_config.rs
platform/src/pubsub/: abstract_subscriber.rs  channel.rs  grp_prio_pair.rs  publisher.rs  subscriber.rs
platform/src/resource/: actor_mgr.rs  res_mgr_thread.rs  resource_driver.rs  sensor_mgr.rs
platform/src/resource/resource_driver/: device_driver_tcp.rs
platform/src/resource/sensor_mgr/: value_thread.rs
platform/tests/: test_pubsub.rs  test_resource.rs
resources/config/wrapper/: green_car.json  (+3 more)
src/: lib.rs
wrapper/: Cargo.toml
wrapper/examples/: wrapper_demo_1_yellow_car.rs  wrapper_demo_2_green_car.rs  wrapper_demo_3_yellow_car_motor.rs
wrapper/src/: lib.rs  wrapper_remote_connector.rs
wrapper/src/wrapper_remote_connector/: wrapper_remote_connector_tcp.rs
