[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concurrent-queue = "2.3.0"
serde = "1.0.193"
serde_json = { version = "1.0.108", features = [] }
strum = "0.25.0"
strum_macros = "0.25.3"