[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concurrent-queue = "2.3.0"
serde = { version = "1.0.193", features = ["derive", "rc"] }
serde_json = { version = "1.0.108", features = [] }
strum = "0.25.0"
strum_macros = "0.25.3"
thiserror = "1.0.50"
lazy_static = "1.4.0"
rand = "0.8.5"
regex = "1.10.2"
log = "0.4.14"
env_logger = "0.10.1"
socket2 = "0.3.19"
tokei = "13.0.0-alpha.0"