[package]
name = "platform"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.19.0"
log = "0.4.14"
env_logger = "0.10.1"
dashmap = "5.5.3"
common = { path = "../common" }
serde = { version = "1.0.193", features = ["derive", "rc"] }
serde_json = { version = "1.0.108", features = [] }