[package]
name = "wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }

serde = { version = "1.0.193", features = ["derive", "rc"] }
serde_json = { version = "1.0.108", features = [] }
socket2 = "0.3.19"
tokei = "13.0.0-alpha.0"
once_cell = "1.19.0"
log = "0.4.14"
env_logger = "0.10.1"